--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "http-status": "^1.7.4",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.6.3",
-        "ts-node-dev": "^2.0.0"
+        "ts-node-dev": "^2.0.0",
+        "zod": "^3.23.8"
     }
 }
